--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,15 +2,10 @@
   width: 100%;
   margin: auto;
   height: 250px;
-  overflow: scroll;
+  overflow-y: scroll;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
-}
-
-::-webkit-scrollbar {
-  width: 0px; /* Remove scrollbar space */
-  background: transparent; /* Optional: just make scrollbar invisible */
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
